# final_project_gazebo

./: CMakeLists.txt  package.xml
final_project/: move_and_read_laser.py  script.py
launch/: final_project_world.launch  rviz.launch  spawn.launch
models/proj_model/: model.config  model.sdf
src/: final_project_plugin.cc
urdf/: robot.gazebo  robot.xacro
worlds/: final_project.world  test.world
